# pjc_cw

./: CMakeLists.txt  main.cpp
lecture_1/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp  exercise_5.cpp  lecture_1.cpp  test_1.cpp
lecture_2/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  lecture_2.cpp  test_2.cpp
lecture_3/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp  lecture_3.cpp
lecture_4/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp  lecture_4.cpp  test_4.cpp
lecture_5/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp  lecture_5.cpp  test_5.cpp
lecture_6/: exercise_1.cpp  exercise_2.cpp  lecture_6.cpp
project/: Board.cpp  Board.h  BoardAction.h  BoardCell.cpp  BoardCell.h  BoardCellVector.cpp  BoardCellVector.h  BoardConfig.cpp  BoardConfig.h  InputReader.cpp  InputReader.h  ScoreRepository.cpp  ScoreRepository.h  input.cpp  project.cpp  render.cpp  types.cpp  utils.cpp
